Add seastar-kafka-client submodule
This submodule links to a repository where Kafka client for Seastar
lives. This Kafka client will be used to push CDC updates to Kafka.

Signed-off-by: Piotr Jastrzebski <piotr@scylladb.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,6 @@
 [submodule "zstd"]
 	path = zstd
 	url = ../zstd
+[submodule "seastar-kafka-client"]
+	path = seastar-kafka-client
+	url = ../seastar-kafka-client
