--- a/.gitmodules
+++ b/.gitmodules
@@ -15,3 +15,6 @@
 [submodule "seastar-kafka-client"]
 	path = seastar-kafka-client
 	url = ../seastar-kafka-client
+[submodule "avro"]
+	path = avro
+	url = https://github.com/apache/avro.git
