point seastar-kafka-client submodule to source, use recent commit

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,7 +14,7 @@
 	url = ../zstd
 [submodule "seastar-kafka-client"]
 	path = seastar-kafka-client
-	url = ../seastar-kafka-client
+	url = https://github.com/StarostaGit/seastar-kafka-client.git
 [submodule "avro"]
 	path = avro
 	url = https://github.com/apache/avro.git
